tests/NormalTests/paczka1/fuzzy1/63356336.err
Error in line 5: HsIZe S491 71,65
Error in line 24: HsIZe S491 214,41
Error in line 35: g5BNrL S1 237
